# M1Combined

./: .gitignore  .npmrc  LICENSE  Label.txt  README.md  buildsnap.sh  cmd  configM1.json  configM1Dev.json  dosnap.sh  fixBuild  fsbl.stm32  memo.txt
M1DiagnosticSW/i2cEEPROM/: example.c
M1TestFixtureTeensy41/: 99-usb-serial.rules  CMakeLists.txt  M1Teensy41.hex  buildLib.sh  format.sh  testfixturePi
M1TestFixtureTeensy41/cross/: arm-teensy32-gnueabihf.cmake  arm-teensy36-gnueabihf.cmake  arm-teensy40-gnueabihf.cmake  arm-teensy41-gnueabihf.cmake
M1TestFixtureTeensy41/libs/Time/: Time.cpp
M1TestFixtureTeensy41/libs/ioEngine/: ioEngine.hpp
M1TestFixtureTeensy41/libs/teensyIoport/: ioPin.hpp
M1TestFixtureTeensy41/system/: Cmd.h  argvp.cpp  base64.hpp  datatypes.cpp  datatypes.h  hw.h  init.cpp  init.h  logger.hpp  main.cpp  power.cpp  power.h  shellFunctor.hpp  singleLEDLibraryMod.h  statusLED.h  watchdog.cpp
M1TestFixtureTeensy41/system/cmds/: allcmds.cpp
M1TestFixtureTeensy41/system/config/: known_16bit_timers.h
STM32Cube/Repository/STM32Cube_FW_MP1_V1.6.0/: Package_license.html  Package_license.md  Release_Notes.html  package.xml
TestBoardMercury/: CMakeLists.txt
TestBoardMercury/mylib/: inputs.hpp  reader.hpp  relays.hpp
TestBoardMercury/mylib/networking/: networking.cpp
TestBoardMercury/mylib/ntpclient/: UdpNtpClient.cpp
TestBoardMercury/src/: init.cpp
TestBoardMercury/src/board/: board.cpp  board.h  humidityContr.hpp  persistent.cpp
doc/: 10-persistent-eth0.link  10-persistent-eth1.link  11-static-eth1.network  autossh.service  pc.md  pikey.pub
gui/: DEEP_ANALYSIS_ISSUES.md  DESIGN_REVIEW.md  DESIGN_REVIEW_CORRECTED.md  REFACTORING_STATUS.md  REFACTOR_GUIDE.md  about.lfm  about.pas  configuratioform.lfm  configuratioform.pas  configurationjson.pas  errorreportform.lfm  errorreportform.pas  gui.desktop  gui.lpi  gui.lpr  gui.lps  logform.lfm  logform.pas  logger.pas  macutils.pas  main.lfm  main.pas  main_backup.pas  provision.pas  scannerClient.pas
gui-react/: README.md  index.html  package.json  vite.config.js
gui-react/snap/: snapcraft.yaml
gui-react/src/: App.css  App.jsx
gui/core/: cloudops.pas  commandlinebuilder.pas  constants.pas  exceptions.pas  ictesthandler.pas  itesthandler.pas  ledmanager.pas  testcommandfactory.pas  testexecution.pas  testrunner.pas  teststate.pas
guiMurcuryBoard/: LICENSE  README.md  SupervisedInputsForm.lfm  SupervisedInputsForm.pas  Teensyduino.lpi  Teensyduino.lpr  Teensyduino.lps  bdArm.json  bdtfRestApi.pas  blinkled.pas  configurationform.lfm  configurationform.pas  configurationjson.pas  door1.lfm  door1.pas  door2.lfm  door2.pas  eeprom_0.json  iovalues.pas  loggerform.lfm  loggerform.pas  mainform.lfm  mainform.pas  mnptester.lpi  mnptester.lpr  mnptester.lps  outputs.lfm  outputs.pas  ppas.sh  relay.pas  simplelog.pas  ubuntuX.md  udpserver.pas  unit1.pas
m1CloudClient/: .eslintrc.js  package.json
m1CloudClient/src/: azureOp.js  logger.js  os.js  secrets.js
m1tfc/: .eslintrc  .eslintrc.json  .prettierrc  API.md  CONTRIBUTING.md  IDP-Technical-2026.md  LICENSE  MANAGER_PRESENTATION_OUTLINE.md  Manager_Discussion_Presentation.pptx  README.md  REFACTORING_GUIDE.md  create_presentation.py  jest.config.js  package.json  refdata.txt  runtest.sh  test.sh
m1tfc/__tests__/src/: exitCodes.test.js
m1tfc/gwudpdgram/: .eslintrc  README.md  index.js  messageFormats.js  udpDgram.js
m1tfc/sim/: README.md  deviceApi.js  fake-stm32-programmer.js  run-ribbon-e2e.js  stm32mp-barebone-term-sim.js  teensy2-rest-sim.js
m1tfc/snap/: snapcraft.yaml
m1tfc/src/: exitCodes.js  m1ICTLink.js  m1TermLink.js  macDB.js  serialLink.js  testBoardLink.js
m1tfc/template/: create_db.sh  dbcreateScript  template.db
m1tfc/tests/: battery.js  buzzer.js  calibrationDefault  calibrationDefault.js  common.js  ddr3.js  eeprom.js  flashEmmc.js  funcTest.js  funcTest.js.saved  ictTestRunner.js  m1boot.js  mnpHW.js  mnpTests.js  programEeprom.js  programMAC.js  regulators.js  ribbonCable.js  rs485.js  statusLed.js  tamper.js
m1tfc/utils/: SshClient.js  commandHelper.js  config.js  eepromHelper.js  errorHandler.js  gpioHelper.js  logger.js  mercuryBoard.js  mercuryBoardHelper.js  os.js  runtimeContext.js  sqliteDriver.js  testHelper.js  tsv.js  utils.js  voltageHelper.js
pcTestRunner/: 99-usb-serial.rules  README.md  config.json  index.js  logshttpserver.service  m1TesterServer.service  m1ctl  m1testergui.desktop  mitesterlog.service  mitesterlogdebug.service  package.json  tfctl
pcTestRunner/routes/: commands.js  target.js
pcTestRunner/services/: commands.service.js  target.service.js
pcTestRunner/teensy/: teensy.js
pcTestRunner/tests/: testRunner.js
pcTestRunner/utils/: SshClient.js  config.js  logger.js  os.js  report.js  targetSerialTerminal.js
restServer/: README.md  package.json
restServer/snap/: snapcraft.yaml
restServer/src/: commandRunner.js  errorMap.js  logger.js  server.js
restServer/test/: commandRunner.test.js
scanner/: CMakeLists.txt  format.sh  scanner.service  startscanner.sh
scanner/src/: interface.c  interface.h  scanner.c
setup/: 01-network-manager-all.yaml  M1-3200.desktop  READE.me  autossh.service  cloud.key  config.json  id_rsa  setup.sh
setup/network/: 10-persistent-eth0.link  10-persistent-eth1.link  11-static-eth0.network  11-static-eth1.network
snap/: snapcraft.yaml
stm32mp1-baremetal/: .gitignore  Leo.txt  README.md  agenda.docx  env.sh  mp1output.txt
stm32mp1-baremetal/experimental/: Cmd.h  Makefile  linkscript.ld  makefile-common.mk
stm32mp1-baremetal/scripts/: build-u-boot.sh  copy-bootloader.sh  partition-sdcard.sh  uimg_header.py
stm32mp1-baremetal/shared/: .stm32disco_conf.hh.kate-swp  makefile-common.mk  print.hh  stm32disco_conf.hh
stp32mp1-baremetal_mnp/: MNP V3 STM32P1 GPIO Description REV F.docx  board_id
stp32mp1-baremetal_mnp/MNPTester/: .project
stp32mp1-baremetal_mnp/S2/: de  links.txt  mp1
tfcroncli/: buildsnap.sh  package.json
tfcroncli/app/: package.json
tfcroncli/snap/: snapcraft.yaml
tfcroncli/src/: azureOp.js  config.js
(+934 files in other folders)
